# cleft

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json
.claude/: settings.local.json
.github/workflows/: build-windows.yml  ci.yml  deploy-web.yml  release.yml
apps/desktop/: package.json
apps/desktop/src/: index.css  router.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: automation.rs  ax.rs  blocklist.rs  classifier.rs  clipboard.rs  commands.rs  db.rs  frontmost_app.rs  keychain.rs  lib.rs  main.rs  palette.rs  pasteboard.rs  search.rs  sensitive.rs  tray.rs
apps/desktop/src/components/: BulkActionsBar.tsx  ClipMetaRow.tsx  ClipPreview.tsx  ClipRow.tsx  ConfirmDialog.tsx  FooterBar.tsx  PreviewPane.tsx  RootLayout.tsx  RuleForm.tsx  RuleRow.tsx  Sidebar.tsx  Toast.tsx  TypeBadge.tsx  ViewHeader.tsx  WorkspaceSwitcher.tsx
apps/desktop/src/components/previews/: CodePreview.tsx  ColorPreview.tsx  CopyButton.tsx  EmailPreview.tsx  FilePathPreview.tsx  JsonPreview.tsx  MarkdownPreview.tsx  PlainTextPreview.tsx  UrlPreview.tsx
apps/desktop/src/hooks/: useAppEvents.ts  useSystemTheme.ts
apps/desktop/src/lib/: age.ts  appIcon.ts  captureSound.ts  color.ts  platform.ts  rules.ts
apps/desktop/src/store/: automationStore.ts  clipboardStore.ts  confirmStore.ts  runwayStore.ts  settingsStore.ts  toastStore.ts  updateStore.ts  workspaceStore.ts
apps/desktop/src/views/: AutomationView.tsx  ClipboardView.tsx  CollectionsView.tsx  SettingsView.tsx  TimelineView.tsx
apps/web/: astro.config.mjs  package.json
apps/web/public/: robots.txt
apps/web/src/components/: PaletteDemo.tsx
apps/web/src/layouts/: Layout.astro
apps/web/src/pages/: index.astro
apps/web/src/styles/: global.css
docs/: PRD.md
src/: App.tsx  ClipPreview.tsx  PermissionRunway.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ax.rs  blocklist.rs  classifier.rs  clipboard.rs  context.rs  db.rs  frontmost_app.rs  keychain.rs  lib.rs  markdown.rs  onboarding.rs  search.rs  sensitive.rs
