[package]
name = "cleft"
version = "0.1.1"
description = "A fast, privacy-first clipboard manager for macOS and Windows"
authors = ["Andy Santana"]
license = "MIT"
repository = "https://github.com/andydev404/cleft"
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name from colliding with the bin name.
name = "cleft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
bip39 = "2"
pulldown-cmark = "0.12"
ammonia = "4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "libc",
    "NSWorkspace",
    "NSRunningApplication",
    "NSPasteboard",
    "NSResponder",
    "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
] }
security-framework = "3"
core-foundation = "0.10"
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
] }
# Windows Credential Manager, for the DB encryption key — using this
# instead of hand-rolled CREDENTIALW FFI, which isn't something to get
# subtly wrong in code that can't be compile-checked in this environment
# (no Windows cross-toolchain available here — see the CI job instead).
# keyring v3 ships NO keystore by default — without the windows-native
# feature, Entry::new has no backing store and the DB key would not
# persist across launches (rendering the encrypted DB unreadable).
keyring = { version = "3", features = ["windows-native"] }

